<resources>
    <string name="app_name">GoForFit</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="exit_from_app">Are you sure you want to exit from the FitIndia App?</string>
    <string name="retry">Retry</string>
    <string name="airplane_mode_off">Airplane mode is off and try again</string>
    <string name="not_connected_msg">You are not connected to the internet. Make sure WiFi or Mobile Data is ON</string>
    <string name="no_internet_connection">No internet Connection</string>
    <string name="data_saved_successfully">Data saved successfully!</string>
    <string name="login">Login</string>
    <string name="username_or_email_address">Username or Email Address</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="new_to_site_create_an_account">New to Site? <b>Create an Account</b></string>
    <string name="forget_password">Forget Password?</string>
    <string name="register_as_fit_india_champion">Register as Fit India Champion</string>
    <string name="other">Other</string>
    <string name="ministry">Ministry</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="city_town_village">City/Town/Village</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="already_have_an_account_login">Already have an Account? <b>Login</b></string>
    <string name="register">Register</string>
    <string name="select">Select</string>
    <string name="register_as">Register As</string>
    <string name="select_state">Select State</string>
    <string name="select_district">Select District</string>
    <string name="select_block">Select Block</string>
    <string name="select_valid_state">Please select a valid state!</string>
    <string name="select_valid_state_district">Please select a valid state and district!</string>
    <string name="validate_string_not_empty">Please enter a valid %s</string>
    <string name="validate_select_not_empty">Please select a %s</string>
    <string name="email_verification_symbols">^[\\w-_\\.+]*[\\w-_\\.]\\@([\\w]+\\.)+[\\w]+[\\w]$</string>
    <string name="state">State</string>
    <string name="district">District</string>
    <string name="block">Block</string>
    <string name="city">City</string>
    <string name="leave_message">Are you sure you want to leave this page?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="logout">Logout</string>
    <string name="new_user_register">Don\'t have an account yet? <b>Sign Up</b></string>
    <string name="username">Please enter username</string>
    <string name="enter_password">Please enter password</string>

    <string name="something_went_wrong">Something went wrong! Please try again later.</string>
    <string name="logout_confirm_msg">Are you sure you want to Logout?</string>
    <string name="dismiss">Dismiss</string>
    <string name="individual">Individual</string>
    <string name="subscriber">subscriber</string>
    <string name="name_of">Name of %s</string>
    <string name="designation">Designation</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="fitness">Fitness</string>
    <string name="nutrition">Nutrition</string>
    <string name="know_your_tests">Know Your Tests</string>
    <string name="take_your_fitness_test">Take your fitness test</string>
    <string name="pe_activities">PE Activities</string>
    <string name="workout">Workout</string>
    <string name="sports">Sports</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="movies">Movies</string>
    <string name="take_test">Take Test</string>

</resources>
